--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: siu-lun.chau@cispa.de
 description: >- # this means to ignore newlines until "baseurl:"
   Siu Lun Chau's academic website. He is a postdoc at the 
   CISPA Helmholtz Center for Information Security researching on trustworthy machine learning.
-baseurl: "/chau999.github.io" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Chau9991
 github_username:  Chau999
