--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,14 @@ theme: minima
 plugins:
   - jekyll-feed
 
+header_pages:
+  - tabs/publication.md
+
+collections:
+  publications:
+    output: true
+    permalink: /:collection/:name
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
