--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Siu Lun Chau
+title: Peronsal Website
 email: siu-lun.chau@cispa.de
 description: >- # this means to ignore newlines until "baseurl:"
   Siu Lun Chau's academic website. He is a postdoc at the 
