remove talk and experience part, it can be seen from CV

--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ plugins:
 
 header_pages:
   - tabs/publication.md
-  - tabs/talk.md
-  - tabs/experience.md
+#  - tabs/talk.md
+#  - tabs/experience.md
 
 collections:
   news:
