--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Siu Lun Chau
 email: siu-lun.chau@cispa.de
 description: >- # this means to ignore newlines until "baseurl:"
   Siu Lun Chau's academic website. He is a postdoc at the 
-  CISPA Helmholtz Center for Information Security researching on trustworthy machine learning.
+  CISPA Helmholtz Center for Information Security researching on epistemic machine learning.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Chau9991
