--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Siu Lun Chau
-email: siu-lun.chau@cispa.de
+email: a.siulun.chau@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Siu Lun Chau's academic website. He is a postdoc at the 
   CISPA Helmholtz Center for Information Security researching on epistemic machine learning.
