--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,7 @@
 title: Siu Lun Chau
 email: a.siulun.chau@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Siu Lun Chau's academic website. He is a postdoc at the 
-  CISPA Helmholtz Center for Information Security researching on epistemic machine learning.
+  Siu Lun Chau's academic website. He is an incoming Assistant Professor at the College of Computing & Data Science, NTU Singapore.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Chau9991
@@ -36,8 +35,7 @@ plugins:
 header_pages:
   - tabs/research.md
   - tabs/publication.md
-#  - tabs/talk.md
-#  - tabs/experience.md
+  - tabs/research_group.md
 
 collections:
   news:
