--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Siu Lun Chau
-email: a.siulun.chau@gmail.com
+email: siulun.chau@ntu.edu.sg
 description: >- # this means to ignore newlines until "baseurl:"
   Siu Lun Chau's academic website. He is an Assistant Professor at the College of Computing & Data Science, NTU Singapore.
 baseurl: "" # the subpath of your site, e.g. /blog
